--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#111111">
   <title>Аэроклин</title>
+  @include('partials/_head.html')
   <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/vendor.css">
   <link rel="stylesheet" href="css/main.css">
@@ -19,6 +20,7 @@
 
     @include('partials/footer.html')
   </div>
+  @include('partials/_foot-scripts.html')
   <script src="js/vendor.js"></script>
   <script src="js/main.js"></script>
 </body>
