--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
   <div class="site-container">
     @include('partials/header.html')
 
+    @include('partials/intro.html')
+
     @include('partials/footer.html')
   </div>
   @include('partials/_foot-scripts.html')
