--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     @include('partials/header.html')
 
     @include('partials/intro.html')
+    @include('partials/news.html')
 
     @include('partials/footer.html')
   </div>
