--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
 
     @include('partials/intro.html')
     @include('partials/news.html')
+    @include('partials/benefits.html')
 
     @include('partials/footer.html')
   </div>
