--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     @include('partials/intro.html')
     @include('partials/news.html')
     @include('partials/benefits.html')
+    @include('partials/info-catalog.html')
 
     @include('partials/footer.html')
   </div>
