--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     @include('partials/news.html')
     @include('partials/benefits.html')
     @include('partials/info-catalog.html')
+    @include('partials/catalog.html')
 
     @include('partials/footer.html')
   </div>
