--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     @include('partials/benefits.html')
     @include('partials/info-catalog.html')
     @include('partials/catalog.html')
+    @include('partials/table.html')
 
     @include('partials/footer.html')
   </div>
