--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
     @include('partials/info-catalog.html')
     @include('partials/catalog.html')
     @include('partials/table-prod.html')
+    @include('partials/info-catalog2.html')
+    @include('partials/table-prod2.html')
+    @include('partials/not-find.html')
 
     @include('partials/footer.html')
   </div>
