--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,9 @@
     @include('partials/info-catalog2.html')
     @include('partials/table-prod2.html')
     @include('partials/not-find.html')
+    @include('partials/info-catalog3.html')
+    @include('partials/catalog2.html') 
+    @include('partials/dilivery.html') 
 
     @include('partials/footer.html')
   </div>
