--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,9 @@
     @include('partials/info-catalog3.html')
     @include('partials/catalog2.html') 
     @include('partials/dilivery.html') 
+    @include('partials/clients.html') 
+    @include('partials/reviews.html') 
+    @include('partials/rospotreb.html') 
 
     @include('partials/footer.html')
   </div>
