--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
     @include('partials/clients.html') 
     @include('partials/reviews.html') 
     @include('partials/rospotreb.html') 
+    @include('partials/certificates.html') 
 
     @include('partials/footer.html')
   </div>
