--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,8 @@
     @include('partials/reviews.html') 
     @include('partials/rospotreb.html') 
     @include('partials/certificates.html') 
+    @include('partials/how-working.html') 
+    @include('partials/backcall.html') 
 
     @include('partials/footer.html')
   </div>
