--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,20 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#111111">
-  <title>Аэроклин</title>
+  <meta name="google-site-verification" content="fdB2AcxuFjkl_1HKngmXEWAp7UIo-IkKXXLMkRH0QR0" />
+  <meta name="yandex-verification" content="ff7e4bef631a4cb2" />
+  <!--metatextblock-->
+  <title>Производство бактерицидных рециркуляторов в Санкт-Петербурге с доставкой Айроклин</title>
+  <meta name="description" content="Производство бактерицидных рециркуляторов от компании Айроклин в Санкт-Петербурге. Где в СПб производство бактерицидных рециркуляторов воздуха с доставкой по России." />
+  <meta name="keywords" content="производство бактерицидных рециркуляторов, купить, цена, доставка, производитель" />
+  <meta property="og:url" content="https://dezinfekziya.ru" />
+  <meta property="og:title" content="Производство бактерицидных рециркуляторов в Санкт-Петербурге купить с доставкой по России" />
+  <meta property="og:description" content="Производство бактерицидных рециркуляторов в Санкт-Петербурге купить по цене от производителя с доставкой по России. Оформить заказ на рециркулятор бактерицидный в интернет-магазине Айроклин с доставкой по России." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="img/og.svg" />
+  <link rel="canonical" href="https://dezinfekziya.ru">
+  <!--/metatextblock-->
+  <meta name="format-detection" content="telephone=no" />
   @include('partials/_head.html')
   <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/vendor.css">
