--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,8 @@
     @include('partials/backcall.html') 
 
     @include('partials/footer.html')
+
+    @include('partials/news-popup.html')
   </div>
   @include('partials/_foot-scripts.html')
   <script src="js/vendor.js"></script>
