--- a/src/about.html
+++ b/src/about.html
@@ -10,15 +10,15 @@
   <meta name="google-site-verification" content="fdB2AcxuFjkl_1HKngmXEWAp7UIo-IkKXXLMkRH0QR0" />
   <meta name="yandex-verification" content="ff7e4bef631a4cb2" />
   <!--metatextblock-->
-  <title>Производство бактерицидных рециркуляторов в Санкт-Петербурге с доставкой Айроклин</title>
-  <meta name="description" content="Производство бактерицидных рециркуляторов от компании Айроклин в Санкт-Петербурге. Где в СПб производство бактерицидных рециркуляторов воздуха с доставкой по России." />
-  <meta name="keywords" content="производство бактерицидных рециркуляторов, купить, цена, доставка, производитель" />
-  <meta property="og:url" content="https://dezinfekziya.ru" />
-  <meta property="og:title" content="Производство бактерицидных рециркуляторов в Санкт-Петербурге купить с доставкой по России" />
-  <meta property="og:description" content="Производство бактерицидных рециркуляторов в Санкт-Петербурге купить по цене от производителя с доставкой по России. Оформить заказ на рециркулятор бактерицидный в интернет-магазине Айроклин с доставкой по России." />
+  <title>Информация о компании Айроклин в Санкт-Петербурге</title>
+  <meta name="description" content="Посмотреть информацию о компании айроклин в СПб. Больше информации о производителе бактерицидных рециркуляторов воздуха Айроклин.">
+  <meta name="keywords" content="информация о компании, спб, россия, бактерицидные, рециркуляторы">
+  <meta property="og:url" content="https://dezinfekziya.ru/about">
+  <meta property="og:title" content="Информация о компании Айроклин в Санкт-Петербурге">
+  <meta property="og:description" content="Посмотреть информацию о компании айроклин в СПб. Больше информации о производителе бактерицидных рециркуляторов воздуха Айроклин.">
   <meta property="og:type" content="website" />
   <meta property="og:image" content="img/og.svg" />
-  <link rel="canonical" href="https://dezinfekziya.ru">
+  <link rel="canonical" href="https://dezinfekziya.ru/about">
   <!--/metatextblock-->
   <meta name="format-detection" content="telephone=no" />
   @include('partials/_head.html')
@@ -31,29 +31,12 @@
   <div class="site-container">
     @include('partials/header.html')
 
-    @include('partials/intro.html')
-    @include('partials/news.html')
-    @include('partials/benefits.html')
-    @include('partials/info-catalog.html')
-    @include('partials/catalog.html')
-    @include('partials/table-prod.html')
-    @include('partials/info-catalog2.html')
-    @include('partials/table-prod2.html')
-    @include('partials/not-find.html')
-    @include('partials/info-catalog3.html')
-    @include('partials/catalog2.html') 
-    @include('partials/dilivery.html') 
-    @include('partials/clients.html') 
-    @include('partials/reviews.html') 
-    @include('partials/rospotreb.html') 
-    @include('partials/certificates.html') 
+    @include('partials/about-content.html')
     @include('partials/how-working.html') 
     @include('partials/backcall.html') 
 
     @include('partials/footer.html')
 
-    @include('partials/news-popup.html')
-    
   </div>
   @include('partials/_foot-scripts.html')
   <script src="js/vendor.js"></script>
