--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,12 @@
     @include('partials/footer.html')
 
     @include('partials/news-popup.html')
-    
+
+    <!-- popup-catalog -->
+
+    @include('partials/popup-catalog1.html')
+
+
   </div>
   @include('partials/_foot-scripts.html')
   <script src="js/vendor.js"></script>
