--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,9 @@
 
     @include('partials/popup-catalog1.html')
 
+    <!-- popup-forms -->
+    @include('partials/popup-forms.html')
+
   </div>
   @include('partials/_foot-scripts.html')
   <script src="js/vendor.js"></script>
