--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,9 @@
     <!-- popup-forms -->
     @include('partials/popup-forms.html')
 
+    <!-- basket-fixed -->
+    @include('partials/basket-fixed.html')
+
   </div>
   @include('partials/_foot-scripts.html')
   <script src="js/vendor.js"></script>
