--- a/src/about.html
+++ b/src/about.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/vendor.css">
   <link rel="stylesheet" href="css/main.css">
+  @include('partials/_head-main.html')
 </head>
 
 <body>
