--- a/src/baktericzidnaya-nasadka-na-split-sistemu.html
+++ b/src/baktericzidnaya-nasadka-na-split-sistemu.html
@@ -33,6 +33,11 @@
     @include('partials/header.html')
 
     @include('partials/baktericzidnaya-nasadka-na-split-sistemu/baktericzidnaya-nasadka-na-split-sistemu-content.html')
+    
+    <!-- dop items -->
+    @include('partials/baktericzidnaya-nasadka-na-split-sistemu/actual-table.html')
+    <!-- dop items end-->
+    
     @include('partials/how-working.html') 
     @include('partials/backcall.html') 
 
