--- a/src/baktericzidnaya-sekcziya-dlya-ventilyaczii.html
+++ b/src/baktericzidnaya-sekcziya-dlya-ventilyaczii.html
@@ -33,6 +33,11 @@
     @include('partials/header.html')
 
     @include('partials/baktericzidnaya-sekcziya-dlya-ventilyaczii/baktericzidnaya-sekcziya-dlya-ventilyaczii-content.html')
+    
+    <!-- dop items -->
+    @include('partials/reczirkulyator-baktericzidnyj-dlya-ofisa/actual-table.html')
+    <!-- dop items end-->
+    
     @include('partials/how-working.html') 
     @include('partials/backcall.html') 
 
