--- a/src/obezzarazhivatel-vozdukha-mediczinskij.html
+++ b/src/obezzarazhivatel-vozdukha-mediczinskij.html
@@ -33,6 +33,14 @@
     @include('partials/header.html')
 
     @include('partials/obezzarazhivatel-vozdukha-mediczinskij/obezzarazhivatel-vozdukha-mediczinskij-content.html')
+    
+    <!-- dop items -->
+    <!-- @include('partials/obezzarazhivatel-vozdukha-mediczinskij/catalog.html') -->
+    @include('partials/obezzarazhivatel-vozdukha-mediczinskij/actual-table.html')
+    <!-- dop items end-->
+
+
+
     @include('partials/how-working.html') 
     @include('partials/backcall.html') 
 
