--- a/src/reczirkulyatory-baktericzidnye.html
+++ b/src/reczirkulyatory-baktericzidnye.html
@@ -33,6 +33,11 @@
     @include('partials/header.html')
 
     @include('partials/reczirkulyatory-baktericzidnye/reczirkulyatory-baktericzidnye-content.html')
+
+    <!-- dop items -->
+    @include('partials/reczirkulyatory-baktericzidnye/actual-table.html')
+    <!-- dop items end-->
+
     @include('partials/how-working.html') 
     @include('partials/backcall.html') 
 
