--- a/src/reczirkulyatory-vozdukha-baktericzidnye-dlya-shkoly.html
+++ b/src/reczirkulyatory-vozdukha-baktericzidnye-dlya-shkoly.html
@@ -33,6 +33,11 @@
     @include('partials/header.html')
 
     @include('partials/reczirkulyatory-vozdukha-baktericzidnye-dlya-shkoly/reczirkulyatory-vozdukha-baktericzidnye-dlya-shkoly-content.html')
+    
+    <!-- dop items -->
+    @include('partials/reczirkulyator-baktericzidnyj-dlya-ofisa/actual-table.html')
+    <!-- dop items end-->
+    
     @include('partials/how-working.html') 
     @include('partials/backcall.html') 
 
